[tool.mypy]
mypy_path = "."
python_version = "3.9"

[tool.poetry]
name = "rutracker-parser"
version = "0.0.0"
description = ""
authors = [ "Maxxle", ]

#[[tool.poetry.packages]]
#include = <additional-packages-to-include>

#[[tool.poetry.source]]
#name = <name>
#url = <url>
#default = true

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.9"
PyQt5-stubs = "^5.15.6.0"
PyQtWebEngine = "*"
requests = "^2.28.2"

# other dependencies
#boto3 = "^1.17.68"
#requests = "^2.25.1"
#pyyaml = "^5.4.1"
#more-itertools = "^8.8.0"
#deprecated = "^1.2.12"

[tool.poetry.dev-dependencies]
#autopep8 = "^1.5.4"
black = "^22.3.0"
flake8 = "3.9.2"
isort = "5.8.0"
mypy = "1.1.1"
nox = "^2022.11.21"
pre-commit = "2.12.1"
pylint = "^2.6.0"
pytest = "^5.2"
#rope = "^0.18.0"
#sphinx = "^3.5.4"
#sphinx-rtd-theme = "^0.5.2"
#sphinx-bootstrap-theme = "^0.7.1"
#moto = "2.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
# <script-name> = "<repository>.<folder>:<name>"
